--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,76 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body { margin: 0; padding: 0;}
+body#landing {
+  font: 16px/20px Arial, Verdana, sans-serif;
+  color: #444444;
+  text-align: center;
+  background: #c9e5f0 url('bg.gif') repeat-x;
+}
+a { text-decoration: none; color: #188fcb; }
+a:hover { text-decoration: underline; }
+.cfx:after { content: "."; display: block;height: 0;clear: both;font-size: 1px;line-height: 1px;visibility: hidden;}
+.cfx { zoom:1; min-height: 10px;}
+* html .clearfix { height: 10px; }
+
+img { border: none;}
+form { margin: 0; padding: 0; }
+h1#tagline {
+  margin: 0;padding: 0px 0 10px; color: #444;
+  font: bold 20px/25px Arial, Verdana, sans-serif;
+}
+p { margin: 0; padding: 5px 0 5px 0; }
+ul, ol { margin: 0; padding: 6px 0 6px 30px; }
+ul { list-style-type: disc; }
+ul li, ol li { margin: 0; padding: 3px 0 3px 0px; }
+
+
+// #landing_wrap { min-height: 405px; background: url('bg_image_light.gif') no-repeat center top; padding-bottom: 100px; }
+* html #landing_wrap { height: 405px; }
+
+/* container */
+  #container { width: 500px; margin: 0 auto; padding-top: 190px;}
+
+/* logo */
+  #logo { width: 318px; height: 58px; margin: 0 auto; background: url('#') no-repeat; }
+  * html #logo { background-image: url('#');  }
+	#landing_logo { font-family: 'Lato', sans-serif; font-size: 60px; margin-bottom: 25px; }
+		.italic { font-style: italic; color: #3B5998}
+  
+/* content */
+  #content { 
+    margin-top: 10px; background: rgba(255,255,255,0.7); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
+    -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.2); -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.2); box-shadow: 0 1px 5px rgba(0,0,0,0.2); padding: 15px 20px;
+  }
+  * html #content { background: white; }
+  .blue-box { background: #f2f8fc; padding: 10px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+  .yellow-box { background: #ffff96; padding: 7px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+  .textbox { 
+    background: white url('textbox.gif') repeat-x top left; border: 1px solid #b7d4ea; height: 37px; padding: 5px 5px 0 20px;
+    -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; text-align: left;
+    -moz-box-shadow: 0 0 4px rgba(208,230,246,0.5); -webkit-box-shadow: 0 0 4px rgba(208,230,246,0.5); box-shadow: 0 0 4px rgba(208,230,246,0.5);
+    font: 20px/25px Arial, Verdana, sans-serif;
+  }
+  
+    .textbox .text { 
+      margin: 5px 0 0; padding: 0; border: none; background: none; color: #444444; font: 20px/25px Arial, Verdana, sans-serif;
+      float: left; width: 320px; outline: 0;
+    }
+    .textbox div .text { width: 100%; float: none;}
+    .textbox .submit {
+      height: 32px; background: #ffeb34 url('submit_big.gif') repeat-x top left; border: 1px solid #fced32;
+      -moz-border-radius:16px; -webkit-border-radius: 16px; border-radius: 16px; color: #786a18; font: bold 18px/25px Arial, Verdana, sans-serif;
+      text-transform: uppercase; cursor: pointer; float: right; width: 75px; 
+    }
+  
+/* footer */
+  #footer { padding-top: 15px; text-align: center;color: #3c8db3;}
+
+/* flash */
+  #flash_notice { background: #FFFF96; padding: 7px 0 }
+
+/* input button */
+
+input#facebook { width: 250px; height: 35px; font-size: 120%; cursor: pointer; font-family: 'lato', sans-serif; font-weight: 400 }
