--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @network, :url => signin_path, :html => { :class => "welcome_form" } do |f| %>
+<%= form_for @network, :url => signin_path, :html => { :id => "welcome_form" } do |f| %>
 <div class="blue-box">
   <div class="textbox textbox-big">
     <%= f.text_field :title, :placeholder => "Case sensitive and totally optional..." %>
@@ -7,5 +7,12 @@
   <div class="actions" style="margin-top: 20px">
       <%= f.submit "Sign in with Facebook", id: "facebook", class: "sb circle text thick-border blue popup"  %>
   </div>
+  
 <% end %>
+
+<div>
+  <p id="connect">
+    <a href="#" id="fb_connect">test link</a>
+  </p>
+</div>
 
