Commented out JS & added ssl for facebook auth to work with heroku

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -73,4 +73,4 @@ ul li, ol li { margin: 0; padding: 3px 0 3px 0px; }
 
 /* input button */
 
-input#facebook { width: 250px; height: 35px; font-size: 120%; cursor: pointer; font-family: 'lato', sans-serif; font-weight: 400 }
+input#fb_connect { width: 250px; height: 35px; font-size: 120%; cursor: pointer; font-family: 'lato', sans-serif; font-weight: 400 }
