--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -5,14 +5,14 @@
   </div>
 </div>
   <div class="actions" style="margin-top: 20px">
-      <%= f.submit "Sign in with Facebook", id: "facebook", class: "sb circle text thick-border blue popup"  %>
+      <%= f.submit "Sign in with Facebook", id: "fb_connect", class: "sb circle text thick-border blue popup"  %>
   </div>
   
 <% end %>
 
-<div>
+<!-- <div>
   <p id="connect">
     <a href="#" id="fb_connect">test link</a>
   </p>
-</div>
+</div> -->
 
