Got the js working somewhat

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
   <div class="actions" style="margin-top: 20px">
-      <%= f.submit "Sign in with Facebook", id: "fb_connect", class: "sb circle text thick-border blue popup"  %>
+      <%= f.submit "Sign in with Facebook", id: "fb_connect", class: "sb circle text thick-border blue popup" %>
   </div>
   
 <% end %>
@@ -16,7 +16,7 @@
   </p>
 </div> -->
 
-<script>
+<!-- <script>
 window.opener.location = "/";
 window.close(); 
-</script>
+</script> -->
