--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @network, :url => signin_path, :html => { :id => "welcome_form" } do |f| %>
 <div class="blue-box">
   <div class="textbox textbox-big">
-    <%= f.text_field :title, :placeholder => "Case sensitive and totally optional..." %>
+    <%= f.text_field :title, :placeholder => "Case sensitive and totally optional...", data: {autocomplete_source: autocomplete_path} %>
   </div>
 </div>
   <div class="actions" style="margin-top: 20px">
@@ -9,14 +9,3 @@
   </div>
   
 <% end %>
-
-<!-- <div>
-  <p id="connect">
-    <a href="#" id="fb_connect">test link</a>
-  </p>
-</div> -->
-
-<!-- <script>
-window.opener.location = "/";
-window.close(); 
-</script> -->
