--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @network, :url => signin_path, :html => { :id => "welcome_form" } do |f| %>
 <div class="blue-box">
   <div class="textbox textbox-big">
-    <%= f.text_field :title, :placeholder => "Case sensitive and totally optional...", data: {autocomplete_source: autocomplete_path} %>
+    <%= f.text_field :title, :placeholder => "Case sensitive and totally optional...", # data: {autocomplete_source: autocomplete_path} %>
   </div>
 </div>
   <div class="actions" style="margin-top: 20px">
