--- a/app/views/networks/_form.html.erb
+++ b/app/views/networks/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.text_field :title, :placeholder => "Enter network name" %>
     </div>
     <div class="textbox textbox-big" style="margin-top: 10px; height: 200px">
-      <%= f.text_field :description, :placeholder => "Enter a description for your network" %>
+      <%= f.text_area :description, :placeholder => "Enter a description for your network" %>
     </div>
     <div class="actions">
       <%= f.submit class: "submit-big" %>
