Changed back text_area to text_field

--- a/app/views/networks/_update_form.erb
+++ b/app/views/networks/_update_form.erb
@@ -15,7 +15,7 @@
       <%= f.label :description, "Edit the description below:" %>
     </div>
     <div class="textbox textbox-big" style="margin-top: 10px; height: 200px">
-      <%= f.text_area :description, :placeholder => "Enter a description for your network" %>
+      <%= f.text_field :description, :placeholder => "Enter a description for your network" %>
     </div>
     <div class="actions">
       <%= f.submit class: "submit-big" %>
